added usecases etc
