# src/controllers/users.rs
@@ -1,8 +1,9 @@
 use crate::error::Result;
-use crate::models::user::{CreateUser, UserConditions, UserId, UserList};
+use crate::models::user::{ImgUrl, NewUser, ProfileImage, User, UserConditions, UserId, UserList};
 use crate::repositories::{user::UserRepo, RepoExt, Repositories};
+use crate::usecases::users::search;
 use axum::{
-    extract::{Extension, Query},
+    extract::{Extension, Path, Query},
     http::StatusCode,
     Json,
 };
@@ -11,16 +12,27 @@ pub async fn index(
     Query(conditions): Query<UserConditions>,
     Extension(repo): RepoExt,
 ) -> Result<Json<UserList>> {
-    let users = repo.user().find_all(&conditions).await?;
+    let users = search(repo.clone(), &conditions).await?;
     Ok(Json(users))
 }
 
-pub async fn add(
-    Json(user_data): Json<CreateUser>,
-    Extension(repo): RepoExt,
-) -> Result<Json<UserId>> {
+pub async fn view(Path(user_id): Path<i32>, Extension(repo): RepoExt) -> Result<Json<User>> {
+    let user = repo.user().find_by_id(user_id).await?;
+    Ok(Json(user))
+}
+
+pub async fn add(Json(user_data): Json<NewUser>, Extension(repo): RepoExt) -> Result<Json<UserId>> {
     let user_id = repo.user().add(&user_data).await?;
     Ok(Json(user_id))
+}
+
+pub async fn edit_profile_img(
+    Json(_profile_image): Json<ProfileImage>,
+    Extension(_repo): RepoExt,
+) -> Result<Json<ImgUrl>> {
+    Ok(Json(ImgUrl {
+        url: String::from("https://example.com/hoge.png"),
+    }))
 }
 
 pub async fn edit() -> StatusCode {
@@ -29,25 +41,4 @@ pub async fn edit() -> StatusCode {
 
 pub async fn delete() -> StatusCode {
     StatusCode::OK
-}
-
-#[cfg(test)]
-mod tests {
-    use super::*;
-    use crate::test::{
-        fixture::user::users_fixture,
-        repositories::create_repositories_for_test
-    };
-
-    #[tokio::test]
-    async fn test_index() {
-        let mut repo = create_repositories_for_test().await;
-        repo
-            .user
-            .expect_find_all()
-            .returning(|_| Ok(users_fixture(5)));
-        let conditions = UserConditions{name:None};
-        let users = repo.user().find_all(&conditions).await.unwrap();
-        assert_eq!(users.len(), 5);
-    }
 }
