# src/models/user.rs
@@ -12,7 +12,7 @@ pub struct User {
 pub type UserList = Vec<User>;
 
 #[derive(Serialize, Deserialize, Debug)]
-pub struct CreateUser {
+pub struct NewUser {
     pub name: String,
     pub msg: Option<String>,
     pub age: Option<i16>,
@@ -26,4 +26,15 @@ pub struct UserConditions {
 #[derive(Serialize, Deserialize, Debug, FromRow)]
 pub struct UserId {
     pub id: i32,
+}
+
+#[derive(Serialize, Deserialize, Debug, FromRow)]
+pub struct ProfileImage {
+    pub user_id: i32,
+    pub base64_img: String,
+}
+
+#[derive(Serialize, Deserialize, Debug, FromRow)]
+pub struct ImgUrl {
+    pub url: String,
 }
